# tenant-screening

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Challenge/data/: output.json
Challenge/tenant_screening/: __init__.py  ai_helper.py  main.py  matcher.py  utils.py
Challenge/tenant_screening.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Challenge/tests/: test_matcher.py
data/: input.json  output.json
tests/: test_matcher.py
