[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenant_screening"
version = "1.0.0"
description = "A package for screening tenants"
authors = [
    { name = "Sarah Adebesin", email = "sarahjoseph@ymail.com" }
]
license = { text = "MIT" }
dependencies = [
    "fuzzywuzzy",
    "python-Levenshtein",
    "openai",
]

[tool.setuptools.packages.find]
where = ["Challenge"]
include = ["tenant_screening*"]

[project.optional-dependencies]
dev = ["pytest", "python-dotenv", "black", "flake8"]
