[tool.setuptools.packages.find]
where = ["Challenge"] 

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenant_screening"
version = "0.1.0"
description = "A package for tenant screening using AI and fuzzy matching."
authors = [
    { name = "Sarah Adebesin", email = "sarahjoseph@ymail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fuzzywuzzy",
    "python-dotenv",
    "openai"
]

[project.scripts]
tenant-screening = "tenant_screening.main:main"
